--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,16 +1,18 @@
-
+---
+const currentYear = new Date().getFullYear()
+---
     
 
-<footer class="rounded-lg shadow m-4 dark:bg-black/20 backdrop-blur-lg w-full xl:w-[1120px] mx-auto mb-10">
-    <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
-      <span class="text-sm sm:text-center text-yellow-100">© 2024. Almost All Rights Reserved.
+<footer class="rounded-lg px-3 shadow m-4 bg-black/5 dark:bg-white/10 dark:shadow-white/20 backdrop-blur-lg w-full mx-auto container lg:max-w-4xl md:max-w-2xl mb-10 flex justify-center">
+    <div class="rounded-lg w-full max-w-screen-xl mx-auto md:flex md:items-center md:justify-between py-4 px-4 md:px-0">
+      <span class="text-sm sm:text-center text-zinc-800/90 dark:text-zinc-200/90">© {currentYear}. Almost All Rights Reserved.
     </span>
-    <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-white/90 sm:mt-0">
+    <ul class="flex flex-wrap items-center mt-3 text-sm font-medium dark:text-white/90 sm:mt-0 ">
         <li>
-            <a href="#" class="hover:underline me-4 md:me-6">About me</a>
+            <a href="/#about-me" class="hover:underline me-4 md:me-6">About me</a>
         </li>
         <li>
-            <a href="#" class="hover:underline me-4 md:me-6">Contact</a>
+            <a id='contact' href="mailto:joaquin.xherrera1@gmail.com" class="hover:underline">Contact</a>
         </li>
     </div>
 </footer>
