--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,49 +1,125 @@
 ---
 import React from '../icons/React.astro'
 import Tailwind from '../icons/Tailwind.astro'
+import Link from '../icons/Link.astro'
+import Github from '../icons/Github.astro'
+import Javascript from '../icons/Javascript.astro'
+import Firebase from '../icons/Firebase.astro'
+import Bootstrap from '../icons/Bootstrap.astro'
+import Vite from '../icons/Vite.astro'
+
 const TAGS = {
     REACT:{
         name: 'React',
-        class: 'bg-black text-white',
+        class: 'bg-[#003159] text-white',
         icon: React,
         
         
     },
     TAILWIND:{
         name: 'Tailwind CSS',
-        class: 'bg-white text-[#73bcf6]',
+        class: 'bg-[#003159] text-white',
         icon: Tailwind,
+    },
+    JAVASCRIPT:{
+        name: 'Javascript',
+        class: 'bg-[#003159] text-white',
+        icon: Javascript,
+    },
+    FIREBASE:{
+        name: 'Firebase',
+        class: 'bg-[#003159] text-white',
+        icon: Firebase,
+    },
+    BOOTSTRAP:{
+        name: 'Bootstrap',
+        class: 'bg-[#003159] text-white',
+        icon: Bootstrap,
+    },
+    VITE:{
+        name: 'Vite',
+        class: 'bg-[#003159] text-white',
+        icon: Vite,
     }
 }
 const PROJECTS = [
     {
         title:'CineSafari - Watch all your favourite movies online',
-        description: 'TENGO QUE CAMBIARLE EL TITLE Y DESCRIPTINO EN EL CODIGO A LOS PROYECTOS',
+        description: 'Your cinematic adventure awaits! Explore a curated collection of top-quality movies from all genres, available for streaming anytime, anywhere. ',
         link:'https://cine-safari.vercel.app/',
         github: 'https://github.com/JoaquinxHerrera/CineSafari.git',
         image: '/projects/cinesafari1.webp',
-        tags: [TAGS.REACT, TAGS.TAILWIND, ]
-    }
+        tags: [TAGS.REACT, TAGS.TAILWIND, TAGS.FIREBASE ]
+    },
+    {
+        title:'Uwear - Your favourite shoes in the same place.',
+        description: 'Browse our selection of premium brands and find the perfect pair to elevate your look. With fast shipping, shopping for sneakers has never been easier.',
+        link:'https://uwear.vercel.app/',
+        github: 'https://github.com/JoaquinxHerrera/Uwear.git',
+        image: '/projects/uwear1.webp',
+        tags: [TAGS.REACT, TAGS.FIREBASE ]
+    },
+    {
+        title:'DeepBlue - Discover the underwater world at Bahamas',
+        description: 'Dive into adventure with DeepBlue, your gateway to unforgettable scuba diving experiences in the Bahamas. We also sell top-quality scuba gear and equipment. ',
+        link:'https://deepbluebahamas.vercel.app/',
+        github: 'https://github.com/JoaquinxHerrera/DeepBlue.git',
+        image: '/projects/deepBlue1.webp',
+        tags: [TAGS.JAVASCRIPT, TAGS.BOOTSTRAP ]
+    },
+    {
+        title:'Fortafit - Be the best version of yourself.',
+        description: 'Elevate your fitness journey with FortaFit, your all-in-one destination for personalized wellness solutions. Take control of your fitness destiny with FortaFit today!',
+        link:'https://fortafit.vercel.app/',
+        github: 'https://github.com/JoaquinxHerrera/fortafit.git',
+        image: '/projects/fortafit1.webp',
+        tags: [TAGS.VITE, TAGS.TAILWIND ]
+    },
 ]
 ---
-
-{PROJECTS.map(({title, description, tags, image}) =>(
-    <article>
-    <h3 class="text-2xl font-semibold text-yellow-100 mb-2">{title}</h3>
-    <p class="text-lg mb-4 text-pretty">{description}</p>
-    <ul class="flex flex-row gap-x-4 mb-4">
-        {tags.map((tag) =>(
-            <li>
-                <span class={`flex gap-x-2 rounded-full text-xs ${tag.class} py-1 px-2`}>
-                    <tag.icon class="size-4"/>
-                    {tag.name}
-                </span>
-            </li>
-        ))}
-    </ul>
-    <img 
-        class="rounded shadow-2xl shadow-white/10"
-        src={image} 
-        alt={`Screenshot of the project ${title}`}>
-    </article>
-))}
+<div class="flex flex-col gap-y-16">
+    {
+        PROJECTS.map(({title, description, tags, image, github, link}) =>(
+        <article class="flex flex-col space-x-0 space-y-8 group md:flex-row md:space-x-8 md:space-y-0">
+            <div class="w-full md:w-1/2">
+                <div class="relative flex flex-col items-center col-span-6 row-span-5 gap-8 transition duration-500 ease-in-out transform shadow-xl overflow-hidden rounded-xl md:group-hover:-translate-y-1 md:group-hover:shadow-2xl lg:border lg:border-gray-800 lg:hover:border-gray-700 lg:hover:bg-gray-800/50">
+                    <img 
+                    class="object-cover object-top w-full h-56 transition duration-500 sm:h-full md:scale-110 md:group-hover:scale-105"
+                    src={image} 
+                    loading="lazy"
+                    alt={`Screenshot of the project ${title}`}
+                    >
+                </div>
+            </div>
+            <div class="w-full md:w-1/2 md:max-w-lg">
+                <h3 class="text-2xl font-bold text-gray-800 dark:text-gray-100">{title}</h3>
+                <div class="flex flex-wrap mt-2">
+                    <ul class="flex flex-row gap-x-4 mb-2">
+                        {tags.map((tag) =>(
+                            <li>
+                                <span class={`flex gap-x-2 rounded-full text-xs ${tag.class} py-1 px-2`}>
+                                    <tag.icon class="size-4"/>
+                                    <span>{tag.name}</span>
+                                </span>
+                            </li>
+                        ))}
+                    </ul>
+                </div>
+                <div class="mt-2 text-gray-700 dark:text-gray-400">
+                    {description}
+                </div>
+                <footer class="flex items-end justify-start mt-4 gap-x-4">
+                    <a href={github} role="link" target="_blank" class="inline-flex items-center justify-center gap-2 px-3 py-2 space-x-2 text-base text-white transition bg-gray-800 border border-gray-600 focus-visible:ring-yellow-500/80 text-md hover:bg-gray-800 hover:border-gray-900 group max-w-fit rounded-xl hover:text-white focus:outline-none focus-visible:outline-none focus-visible:ring focus-visible:ring-white focus-visible:ring-offset-2 active:bg-black">
+                        <Github class="size-6"/>
+                        Code
+                    </a>
+                    <a href={link} target="_blank" class="inline-flex items-center justify-center gap-2 px-3 py-2 space-x-2 text-base text-white transition bg-gray-800 border border-gray-600 focus-visible:ring-yellow-500/80 text-md hover:bg-gray-800 hover:border-gray-900 group max-w-fit rounded-xl hover:text-white focus:outline-none focus-visible:outline-none focus-visible:ring focus-visible:ring-white focus-visible:ring-offset-2 active:bg-black">
+                        <Link class="size-6"/>
+                        Preview
+                    </a>
+                </footer>
+            </div>
+            
+        </article>
+    ))}
+</div>
