--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import '@fontsource-variable/onest';
+import { ViewTransitions } from 'astro:transitions';
 import Footer from '../components/Footer.astro';
 import Header from "../components/Header.astro"
 interface Props {
@@ -19,37 +20,135 @@ const { title, description } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		<ViewTransitions/>
 	</head>
-	<body>
-		<div class="absolute top-0 z-[-2] h-screen w-screen bg-neutral-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))]">
+	<body class="relative text-black dark:text-white">
+		<div class="absolute top-0 bottom-0 z-[-2] min-h-screen w-full bg-gray-50 dark:bg-gray-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))]">
 		</div>
 		<Header />
 		<slot />
 		<Footer/>
+		<style is:global>
+			:root {
+				color-scheme: light dark;
+			}
+			html {
+				font-family: "Onest Variable", system-ui, sans-serif;
+				scroll-behavior: smooth;
+			}
+			body{
+				
+				color: rgba(17, 17, 17, 0.9);
+				display: flex;
+				flex-direction: column;
+				min-height: 100vh;
+				overscroll-behavior: none;
+			}
+		
+			@media (prefers-reduced-motion: reduce){
+				html{
+					scroll-behavior: auto;
+				}
+			}
+			@media (prefers-color-scheme: dark) {
+				body {
+				  color: rgba(255, 255, 255, 0.9);
+				}
+			}
+			#header-nav {
+				animation: blur linear both 0.5s;
+				animation-timeline: scroll();
+				animation-range: 0 500px;
+			  }
+		
+			@keyframes blur {
+				to {
+				  backdrop-filter: blur(20px);
+				  border-width: 1px;
+				  border-color: rgba(0, 0, 0);
+				  padding: 0.25rem 0.75rem;
+				  display: flex;
+				  flex-direction: row;
+				  align-items: center;
+				  background-color: rgb(229, 229, 229);
+				  border-radius: 9999px;
+				}
+			}
+		
+			@media (prefers-color-scheme: dark) {
+				@keyframes blur {
+				  from {
+					border: 0px;
+				  }
+				  to {
+					box-shadow:
+					  0px 5px 50px -5px rgba(0, 0, 0, 0.1),
+					  0px 0px 0 1px rgba(0, 0, 0, 0.3);
+					background: rgba(0, 0, 0, 0.3);
+					backdrop-filter: blur(20px);
+					border-width: 1px;
+					border-color: rgba(0, 0, 0);
+					padding-left: 0.75rem;
+					padding-right: 0.75rem;
+					padding-top: 0.25rem;
+					padding-bottom: 0.25rem;
+					display: flex;
+					flex-direction: row;
+					align-items: center;
+					background-color: rgba(0, 0, 0, 0.3);
+					border-radius: 9999px;
+				  }
+				}
+			}
+			@media (max-width: 639px) {
+				.xs-text{ 
+					font-size:1.9rem;
+					padding-top:0.1em;
+				}
+				.xs-center{ 
+					display:flex;
+					justify-content:center;
+					text-align:center;
+				}
+				.xs-mt-2{ 
+					margin-top:2em;
+				}
+				.xs-w-full{ 
+					width: 100%;
+				}
+				.xs-flex-column{ 
+					display:flex;
+					flex-direction:column;
+				}
+				.xs-hidden{ 
+					display:none;
+				}
+				.xs-size{ 
+					width:2em
+				}
+				.xs-mx-auto{ 
+					margin: 0 auto;
+				}
+				.xs-w{ 
+					width:80%
+				}
+				.xs-mt{ 
+					margin-top:9em;
+				}
+				.xs-nav{
+					text-align:center;
+					margin-left:40%;
+					height:100vh;
+					margin-top:30vh;
+					font-size:1.5rem;					
+				}
+				.xs-a{
+					padding:25px 0;
+				}
+
+
+			}
+			
+		</style>		
 	</body>
 </html>
-<style is:global>
-	:root {
-		color-scheme: light dark;
-	}
-	html {
-		background: ;
-		font-family: "Onest", system-ui, sans-serif;
-		scroll-behavior: smooth;
-	}
-	body{
-		
-		color: rgb(199, 209, 221);
-		background: #0a0a0a;
-		display: flex;
-		flex-direction: column;
-		min-height: 100vh;
-	}
-
-	@media (prefers-reduced-motion: reduce){
-		html{
-			scroll-behavior: auto;
-		}
-	}
-	
-</style>
