--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,14 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
-import Badge from '../components/Badge.astro'
-import LinkedIn from '../icons/LinkedIn.astro'
-import SocialPill from '../components/SocialPill.astro';
-import Github from '../icons/Github.astro'
-import Mail from '../icons/Mail.astro'
 import SectionContainer from '../components/SectionContainer.astro';
 import Experience from '../components/Experience.astro';
 import Briefcase from '../icons/Briefcase.astro';
 import Code from '../icons/Code.astro';
 import Projects from '../components/Projects.astro';
+import Hero from '../components/Hero.astro';
+import AboutMe from '../components/AboutMe.astro';
+import Logros from '../components/Logros.astro';
+import Certificate from '../icons/Certificate.astro';
 ---
 
 <Layout 
@@ -18,38 +16,34 @@ import Projects from '../components/Projects.astro';
 	description="Hire Joaquin to create your web or mobile aplication. Web developer."
 	>
 	<main class="px-4">
-		<SectionContainer class="py-44 pb-32">
-
-			<h1 class="text-white text-3xl md:text-4xl lg:text-5xl font-bold flex flex-row gap-x-4 pb-6 lg:pb-10">Hey, I'm Joaquin Herrera <div class="flex justify-center items-center"><a href="https://linkedin.com/in/joaquin-herrera-396150183" target="_blank"><Badge>Open to work</Badge></a> </div></h1>
-			<h2 class="text-xl lg:text-2xl opacity-80 text-wrap max-w-[700px]">Web developer, from Argentina</h2>
-			<nav class="flex gap-4 mt-8 flex-wrap">
-				<SocialPill href="https://linkedin.com/in/joaquin-herrera-396150183">
-					<LinkedIn class="size-4 md:size-6"/>
-					LinkedIn
-				</SocialPill>			
-				<SocialPill href="https://github.com/JoaquinxHerrera">
-					<Github class="size-4 md:size-6"/>
-					Github
-				</SocialPill>			
-				<SocialPill href="mailto:joaquin.xherrera1@gmail.com">
-					<Mail class="size-4 md:size-6"/>
-					joaquin.xherrera1@gmail.com
-				</SocialPill>			
-			</nav>
-				
+		<SectionContainer id="joaquin.dev" class="md:pt-36">
+			<Hero >
+			 </Slot>
+			</Hero>		
 		</SectionContainer>
-		<SectionContainer id="experience">
-			<h2 class="text-3xl font-semibold mb-6 flex gap-x-3 items-center">
-				<Briefcase class="size-7"/>
-				Work experience</h2>
-			<Experience/>
-		</SectionContainer>
-		<SectionContainer id="experience">
-			<h2 class="text-3xl font-semibold mb-6 flex gap-x-3 items-center">
-				<Code class="size-7"/>
-				Projects</h2>
-			<Projects/>
-		</SectionContainer>
+		<div class="space-y-24">
+			<SectionContainer id="about-me">
+				<AboutMe/>
+			</SectionContainer>
+			<SectionContainer id="experience" class="sm:w-[80%] xs-w">
+				<h2 class="flex items-center mb-6 text-3xl font-semibold gap-x-3 text-black/80 dark:text-white">
+					<Briefcase class="size-7"/>
+					Work experience</h2>
+				<Experience/>
+			</SectionContainer>
+			<SectionContainer id="projects" class="sm:w-[80%] xs-w">
+				<h2 class="flex items-center mb-6 text-3xl font-semibold gap-x-3 text-black/80 dark:text-white">
+					<Code class="size-7"/>
+					Projects</h2>
+				<Projects/>
+			</SectionContainer>
+			<SectionContainer class="sm:w-[80%] xs-w">
+				<h2 class="flex items-center mb-6 text-3xl font-semibold gap-x-3 text-black/80 dark:text-white">
+					<Certificate class="size-7"/>
+					Achievements</h2>
+				<Logros/>
+			</SectionContainer>
+		</div>
 	</main>
 </Layout>
 
