--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -1,7 +1,7 @@
 <div class="lg:flex lg:flex-row sm:flex-col">
     <div class="w-full relative md:flex md:justify-center">
-        <img class="absolute size-[100px] lg:bottom-[5px] lg:left-[345px] z-10 md:left-[445px] md:bottom-[20px] lg:flex sm:hidden xs-hidden" src="../../public/work-ilust.png" alt="work-emoji">
-        <img class="w-[400px] h-[420px] object-cover rounded-lg md:align-center sm:size-[400px] sm:mx-auto xs-mx-auto" src="../../public/aboutme-left.png" alt="">
+        <img class="absolute size-[100px] lg:bottom-[5px] lg:left-[345px] z-10 md:left-[445px] md:bottom-[20px] lg:flex sm:hidden xs-hidden" src="./work-ilust.png" alt="work-emoji">
+        <img class="w-[400px] h-[420px] object-cover rounded-lg md:align-center sm:size-[400px] sm:mx-auto xs-mx-auto" src="./aboutme-left.png" alt="">
         <span class="">
             <style>
                 @keyframes slow-spin {
@@ -12,7 +12,7 @@
                   animation: slow-spin 10s linear infinite; 
                 }
               </style>
-            <img class="bg-white size-[180px] rounded-full absolute lg:left-[300px] lg:top-[260px] animate-spin slow-spin inline-block md:left-[400px] md:top-[260px] lg:flex sm:hidden xs-hidden" src="../../public/spintext-aboutme.png" alt="">
+            <img class="bg-white size-[180px] rounded-full absolute lg:left-[300px] lg:top-[260px] animate-spin slow-spin inline-block md:left-[400px] md:top-[260px] lg:flex sm:hidden xs-hidden" src="./spintext-aboutme.png" alt="">
         </span>
     </div>
     <div class="w-full sm:w-[85%] ml-[60px] lg:mt-[0px] md:mt-10 xs-w">
