--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -1,7 +1,7 @@
 <div class="lg:flex lg:flex-row sm:flex-col">
     <div class="w-full relative md:flex md:justify-center">
         <img class="absolute size-[100px] lg:bottom-[5px] lg:left-[345px] z-10 md:left-[445px] md:bottom-[20px] lg:flex sm:hidden xs-hidden" src="./work-ilust.png" alt="work-emoji">
-        <img class="w-[400px] h-[420px] object-cover rounded-lg md:align-center sm:size-[400px] sm:mx-auto xs-mx-auto" src="./aboutme-left.png" alt="">
+        <img class="w-[400px] h-[420px] object-cover rounded-lg md:align-center sm:size-[400px] sm:mx-auto xs-mx-auto xs-w-img" src="./aboutme-left.png" alt="">
         <span class="">
             <style>
                 @keyframes slow-spin {
