--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -26,7 +26,7 @@ const navItems = [
 
 ---
 
-<header class="fixed top-0 z-20 flex justify-between md:items-center py-5 px-5 w-full mx-auto bg-white dark:bg-[#1C1F27] shadow " id="header">
+<header class="fixed top-0 z-20 flex justify-between md:items-center py-5 px-5 w-full mx-auto bg-white dark:bg-[#1C1F27] shadow xs-header" id="header">
     <a href='/#joaquin.dev' id="logo" class="text-2xl font-semibold ">Joaquin.dev</a>
 
     <nav class="xs-hidden sm:hidden md:flex  md:gap-x-5 opacity-90 align-right items-end justify-end text-end md:h-auto sm:h-[100vh]  sm:w-[auto] sm:text-center sm:ml-[45%] sm:mt-[30vh] md:m-0 sm:text-2xl md:text-base sm:gap-y-[50px] sm:py-0 xs-nav" id="menu">
