--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -29,7 +29,7 @@ import Bootstrap from "../icons/Bootstrap.astro";
                  href="https://linkedin.com/in/joaquin-herrera-396150183"
                  target="_blank"
                  rel="noopener"
-                 class="flex items-center transition md:justify-center md:hover:scale-105"
+                 class="flex items-center transition md:justify-center md:hover:scale-105 xs-hidden"
                 >
                     <Badge> Open to work</Badge>
                 </a>
@@ -56,16 +56,16 @@ import Bootstrap from "../icons/Bootstrap.astro";
     </div>
     <div class="flex items-center justify-between font-semibold text-lg lg:w-[67%]  mt-20  py-2 px-3 rounded-md bg-gray-100 border border-gray-300  dark:bg-gray-800 dark:border-gray-600 dark:text-white text-gray-800 lg:mx-0 md:mx-auto sm:w-[95%]  xs-w-full xs-flex-column">
         <p>Tech Stack <span class="xs-hidden">|</span></p>
-        <div class="flex gap-3">
-            <Html class="size-10 xs-size"/>
-            <Css class="size-10 xs-size"/>
-            <Javascript class="size-10 xs-size"/>
-            <React class="size-10 xs-size"/>
-            <Mongodb class="size-10 xs-size"/>
-            <Node class="size-10 xs-size"/>
-            <Figma class="size-10 xs-size"/>
-            <Bootstrap class="size-10 xs-size"/>
-            <Tailwind class="size-10 xs-size"/>
+        <div class="flex gap-3 xs-gap">      
+                <Html class="size-10 xs-size"/>
+                <Css class="size-10 xs-size"/>
+                <Javascript class="size-10 xs-size"/>
+                <React class="size-10 xs-size"/>
+                <Mongodb class="size-10 xs-size"/>
+                <Node class="size-10 xs-size"/>
+                <Figma class="size-10 xs-size"/>
+                <Bootstrap class="size-10 xs-size"/>
+                <Tailwind class="size-10 xs-size"/>
         </div> 
         
     </div>
