--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -137,7 +137,7 @@ const { title, description } = Astro.props;
 					margin-top:9em;
 				}
 				.xs-nav{
-					text-align:center;
+					text-align:left;
 					margin-right: auto;
 					height:100vh;
 					margin-top:30vh;
