--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -18,6 +18,6 @@
     <div class="w-full sm:w-[85%] ml-[60px] lg:mt-[0px] md:mt-10 xs-w">
         <h3 class="text-l font-bold text-yellow-400 mb-2 lg:text-start sm:text-center lg:mt-6 sm:mt-10 xs-center xs-mt-2">ABOUT ME</h3>
         <h1 class="text-2xl font-bold gap-x-3 text-black/80 dark:text-white mb-4">Front-End Developer based in Buenos Aires, Argentina📍</h1>
-        <p>Hi there! My name is Joaquin Herrera, and I'm a Frontend Developer. Previously, I ventured into the world of administration and accounting, but soon realized that designing and developing software was my true passion. <br><br>  Now, as a Frontend Developer, I bring a unique perspective to my work, combining my expertise in administration with my creativity in crafting exceptional user experiences.</p>
+        <p>Hi there! My name is Joaquin Herrera, and I'm a Frontend Developer. Previously, I ventured into the world of administration and accounting, but soon realized that designing and developing software was my true passion. <br><br>  Now, as a Frontend Developer, I bring a unique perspective to my work, combining my experience in administration with my creativity in crafting exceptional user experiences.</p>
     </div>
 </div>
