--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -46,7 +46,7 @@ import Bootstrap from "../icons/Bootstrap.astro";
                 </SocialPill>
                 <SocialPill href="https://linkedin.com/in/joaquin-herrera-396150183">
                     <LinkedIn class="size-4"/>
-                    LinkeIn
+                    LinkedIn
                 </SocialPill>
             </nav>
         </div>
