--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -3,6 +3,13 @@ import { Image, Picture } from 'astro:assets';
 import ExperienceItem from '../components/ExperienceItem.astro'
 const EXPERIENCE = [
     {
+        date: '07-2024',
+        title: 'Frontend Developer',
+        company: 'Igrowker',
+        description: 'Participated in the frontend development of Talent Place, a platform connecting junior workers with employers, using React, Vite, JavaScript, and Bootstrap CSS.',
+        link: 'https://talent-place.netlify.app/',
+    },
+    {
         date: '06-2023',
         title: 'Landing Page development',
         company: 'Boid',
@@ -11,7 +18,7 @@ const EXPERIENCE = [
     },
     {
         date: '08-2022 - 04-2023',
-        title: 'Client Financial Managment Analyst',
+        title: 'Client Financial Management Analyst',
         company: 'Accenture',
         description: 'Control and management of the financials of the Companys contracts with its US NE clients. I was assigned contracts for which I carried out a control and analysis in order to ensure that the finances meet with their original budget, taking into account the different variables that affect the life of a contract.',
     },
