--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -7,14 +7,16 @@ import Javascript from '../icons/Javascript.astro'
 import Firebase from '../icons/Firebase.astro'
 import Bootstrap from '../icons/Bootstrap.astro'
 import Vite from '../icons/Vite.astro'
+import Express from '../icons/Express.astro'
+import Mongodb from '../icons/Mongodb.astro'
+import Node from '../icons/Node.astro'
+
 
 const TAGS = {
     REACT:{
         name: 'React',
         class: 'bg-[#003159] text-white',
-        icon: React,
-        
-        
+        icon: React,   
     },
     TAILWIND:{
         name: 'Tailwind CSS',
@@ -40,9 +42,32 @@ const TAGS = {
         name: 'Vite',
         class: 'bg-[#003159] text-white',
         icon: Vite,
-    }
+    },
+    EXPRESS:{
+        name: 'Express',
+        class: 'bg-[#d1a102] text-black',
+        icon: Express,
+    },
+    MONGODB:{
+        name: 'MongoDB',
+        class: 'bg-[#003159] text-white',
+        icon: Mongodb,
+    },
+    NODE:{
+        name: 'Node.js',
+        class: 'bg-[#003159] text-white',
+        icon: Node,
+    },
 }
 const PROJECTS = [
+    {
+        title:'BlueBazaar - Ecommerce Platform',
+        description: 'BlueBazaar is a marketplace platform where users can list their products for others to purchase. It allows for both new and secondhand items, enabling users to resell their belongings easily.',
+        link:'https://bluebazaar.onrender.com/',
+        github: 'https://github.com/JoaquinxHerrera/BlueBazaar.git',
+        image: '/projects/bluebazaar.webp',
+        tags: [TAGS.EXPRESS, TAGS.MONGODB, TAGS.NODE ]
+    },
     {
         title:'CineSafari - Watch all your favourite movies online',
         description: 'Your cinematic adventure awaits! Explore a curated collection of top-quality movies from all genres, available for streaming anytime, anywhere. ',
