talentplace url fix

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -7,7 +7,7 @@ const EXPERIENCE = [
         title: 'Frontend Developer',
         company: 'Igrowker',
         description: 'Participated in the frontend development of Talent Place, a platform connecting junior workers with employers, using React, Vite, JavaScript, and Bootstrap CSS.',
-        link: 'https://talent-place.netlify.app/',
+        link: 'https://talentplace.vercel.app/',
     },
     {
         date: '06-2023',
