--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -3,6 +3,13 @@ import { Image, Picture } from 'astro:assets';
 import ExperienceItem from '../components/ExperienceItem.astro'
 const EXPERIENCE = [
     {
+        date: '10-2024 - Now',
+        title: 'Web Developer',
+        company: 'CaryHealth',
+        description: 'Made improvements and fixes to the existing website to enhance functionality and performance. Developed the company’s new website, implementing a modern design and improved user experience.',
+        link: 'https://www.cary.health/',
+    },
+    {
         date: '07-2024',
         title: 'Frontend Developer',
         company: 'Igrowker',
